namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-rap-prototype/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-rap-prototype
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "move-a-prisoner-prototype"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "DPS Shared: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-rap-prototype"
    cloud-platform.justice.gov.uk/team-name: "move-a-prisoner-prototype"
    cloud-platform.justice.gov.uk/review-after: ""
